# self-sculpt

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  report.md  requirements.txt
experiments/: run_all.py
experiments/configs/: annealed_high.yaml  annealed_mid.yaml  high.yaml  low.yaml  mid.yaml  ultra_low.yaml
src/: __init__.py
src/api/: cache.py  schemas.py  server.py
src/evaluation/: __init__.py  diagnostics.py  metrics.py
src/layers/: __init__.py  gate_strategies.py  prunable_linear.py
src/losses/: __init__.py  loss_registry.py  sparsity_loss.py
src/models/: __init__.py  baseline_net.py  prunable_net.py
src/training/: __init__.py  lambda_scheduler.py  trainer.py
src/visualization/: __init__.py  animate.py  plots.py
tests/: test_gradient_flow.py  test_prunable_linear.py  test_sparsity_loss.py
